Fixing some problems on mobile size screen and organizing all css content in index.css file only

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,367 @@
-body {
+/* App.css file */
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Custom Properties, update these for your own design */
+
+:root {
+  --ff-primary: "Source Sans Pro", sans-serif;
+  --ff-secondary: "Source Code Pro", monospace;
+
+  --fw-reg: 300;
+  --fw-bold: 900;
+
+  --clr-light: #fff;
+  --clr-dark: #303030;
+  --clr-accent: #e9c46a;
+
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
+  --fs-body: 1rem;
+
+  --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
+}
+
+/* --clr-accent: #16e0bd; #e9c46a  #fec89a #deab90  #f79d65*/
+@media (min-width: 800px) {
+  :root {
+    --fs-h1: 4.5rem;
+    --fs-h2: 3.75rem;
+    --fs-h3: 1.75rem;
+    --fs-body: 1.125rem;
+  }
+}
+/* General styles */
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background: var(--clr-light);
+  /* background: #fffbf0; */
+  color: var(--clr-dark);
+  margin: 0;
+  font-family: var(--ff-primary);
+  font-size: var(--fs-body);
+  line-height: 1.6;
+}
+
+/* Typography (just setting font-families, sizes, color) */
+h1,
+h2,
+h3 {
+  line-height: 1;
+  margin: 0;
+}
+
+h1 {
+  font-size: var(--fs-h1);
+}
+h2 {
+  font-size: var(--fs-h2);
+}
+h3 {
+  font-size: var(--fs-h3);
+}
+
+/* Navbar.css */
+.Navbar {
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 251, 240, 1) 100%
+  );
+  /* background: #fffbf0; */
+  height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.Navbar-logo {
+  color: var(--clr-dark);
+  font-weight: 500;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.Nav-menu {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 15px;
+  list-style: none;
+  text-align: center;
+  width: 70vw;
+  justify-content: end;
+  margin-right: 1rem;
+}
+
+.Nav-links {
+  color: black;
+  font-weight: 400;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+}
+.Nav-links .number {
+  font-weight: 600;
+  color: var(--clr-accent);
+}
+
+.Nav-links:hover {
+  color: black;
+  background-color: #f5e7c1;
+  border-radius: 4px;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: var(--clr-accent);
+}
+
+.Nav-links-mobile {
+  display: none;
+}
+
+.Navbar-icon {
+  display: none;
+}
+
+@media screen and (max-width: 1180px) {
+  .Navbar {
+    position: relative;
+  }
+
+  .Nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 630px;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .Nav-menu.active {
+    background: #858585;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 3;
+  }
+
+  .Nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .Nav-links:hover {
+    color: var(--clr-light);
+    background-color: var(--clr-dark);
+    border-radius: 0;
+  }
+
+  .Navbar-logo {
+    margin-top: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
+  .Navbar-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: var(--clr-accent);
+    font-size: 2rem;
+  }
+
+  .Nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    background: var(--clr-dark);
+    text-decoration: none;
+    color: var(--clr-light);
+    font-size: 1.5rem;
+  }
+
+  .Nav-links-mobile:hover {
+    background: var(--clr-accent);
+    color: var(--clr-light);
+    transition: 250ms;
+  }
+
+  Button {
+    display: none;
+  }
+}
+/* Intro.css */
+section {
+  padding: 2em 4em;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+strong {
+  font-weight: 700;
+}
+
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
+}
+
+.section__title {
+  /* margin-top: 2em; */
+  margin-bottom: 0.5em;
+}
+
+.section__title--intro {
+  font-weight: 300;
+}
+
+.section__title--intro strong {
+  display: block;
+}
+
+.section__subtitle {
+  margin: 0;
+  font-size: 1.25rem;
+}
+
+.section__subtitle--intro {
+  background: var(--clr-accent);
+  padding: 0.25em 1em;
+  font-family: "Source Code Pro", monospace;
+  margin-bottom: 1em;
+}
+
+.intro {
+  position: relative;
+}
+
+.intro__img {
+  width: 450px;
+  box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
+}
+
+.section__subtitle--intro {
+  display: inline-block;
+}
+
+@media (min-width: 1110px) {
+  .intro {
+    display: grid;
+    width: min-content;
+    margin: 0 auto;
+    grid-column-gap: 1em;
+    grid-template-areas:
+      "img title"
+      "img subtitle";
+    grid-template-columns: min-content max-content;
+  }
+
+  .intro__img {
+    margin-right: 70px;
+    grid-area: img;
+    min-width: 400px;
+    position: relative;
+    margin-top: 3em;
+    z-index: 2;
+  }
+
+  .section__title--intro {
+    margin-top: 5rem;
+  }
+
+  .section__subtitle--intro {
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    padding: 10px 40px;
+    position: relative;
+    left: -2em;
+    width: calc(100% + 4em);
+    margin-bottom: 400px;
+    font-weight: 500;
+    font-size: 1.5rem;
+  }
+}
+/* Button.css */
+
+.btn {
+  padding: 8px 20px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  padding: 8px 20px;
+  transition: all 0.3s ease-out;
+  background-color: var(--clr-accent);
+  transition: 250ms;
+}
+
+.btn--primary {
+  border: 3px solid var(--clr-accent);
+  background: var(--clr-light);
+  color: var(--clr-dark);
+}
+
+.btn--outline {
+  background-color: transparent;
+  color: var(--clr-light);
+  padding: 8px 20px;
+  border-radius: 4px;
+  border: 1px solid var(--clr-accent);
+  transition: all 0.3s ease-out;
+}
+
+.btn--medium {
+  padding: 8px 20px;
+  border-radius: 4px;
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--clr-dark);
+}
+
+.btn-large {
+  padding: 12px 26px;
+  border-radius: 4px;
+  font-size: 20px;
+  color: var(--clr-light);
 }
